--- a/_config.yml
+++ b/_config.yml
@@ -1,27 +1,27 @@
-title: Stackbit Libris Theme
+title: Student Site
 baseurl: /
-permalink: '/:title/'
+permalink: "/:title/"
 collections:
   posts:
-    permalink: '/posts/:title/'
-palette: blue
+    permalink: "/posts/:title/"
+palette: navy
 palettes:
   blue:
     sass:
-      accent1: '#00c6ff'
-      accent2: '#0072ff'
+      accent1: "#00c6ff"
+      accent2: "#0072ff"
   green:
     sass:
-      accent1: '#12db5d'
-      accent2: '#11998e'
+      accent1: "#12db5d"
+      accent2: "#11998e"
   navy:
     sass:
-      accent1: '#004e92'
-      accent2: '#000428'
+      accent1: "#004e92"
+      accent2: "#000428"
   violet:
     sass:
-      accent1: '#8e2de2'
-      accent2: '#4a00e0'
+      accent1: "#8e2de2"
+      accent2: "#4a00e0"
 sass:
   indentWidth: 4
   style: nested
