--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
-content: '&copy; Stackbit-Libris. All rights reserved.'
+content: "&copy; Student Name"
 links:
   - text: Made with Stackbit
-    url: 'https://www.stackbit.com'
+    url: "https://www.stackbit.com"
     new_window: true
 has_social: true
